/**
*  This file tells Gradle how to build the main Tangent-L project
**/

// Define plugins used by Gradle to build Möbius
plugins {
    id 'war'
    id 'org.gretty' version '2.2.0'
    id 'eclipse'
    id "net.ltgt.apt" version "0.18"
    id 'java-library'
    id "com.eriwen.gradle.js" version "2.14.1"
}

apply plugin: 'java'
apply plugin: 'eclipse'

// Metadata for the project
group = 'Data-Systems-Group'
version = '0.1'
description = 'Tangent-L'

// Java version information
sourceCompatibility = 1.8
targetCompatibility = 1.8


jar {
    baseName = 'com.vogella.springboot'
    version = '0.0.1-SNAPSHOT'
}

// Define locations for Java files
sourceSets {
    main {
    	// Paths for Java source files
        java {
            srcDir 'src'
        }
        
        // Path for resources, i.e. ApplicationResource.properties
        resources {
          	srcDir 'src'
        }
    }
    test {
        java {
            srcDir 'src.testing'
        }
        
        // Path for test resources
        resources {
          	srcDir 'resources.test'
        }
    }
}

test {
    testLogging {
        // Uncomment to show the output of System.out calls in the console when running tests
        // showStandardStreams true
    
        // Show full stack traces for exceptions
        testLogging {
            exceptionFormat = 'full'
        }
    }

    // Maximum number of tests to run in parallel
    maxParallelForks 1
}

// Repositories to check for JAR dependancies
repositories {
    jcenter()
    mavenCentral()
    mavenLocal()
}

dependencies {
	compile group: 'org.apache.lucene', name: 'lucene-core', version: '6.4.2'
	
	compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '6.4.2'
	
	compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '6.4.2'
	
	compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'

	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
	
	compile group: 'junit', name: 'junit', version:'4.12'
	
	// JUnit dependancies
	testCompile group: 'junit', name: 'junit', version:'4.12'
	testCompile group: 'org.mockito', name: 'mockito-core', version:'1.9.5'

	testImplementation 'junit:junit:4.12'

	// auto-factory contains both annotations and their processor, neither is needed at runtime
	compileOnly "com.google.auto.value:auto-value:1.5"
	apt         "com.google.auto.value:auto-value:1.5"
}


